tests/snapshots/ecma262__es2015_module-10.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Sequence(
                        [
                            Lit(
                                Number(
                                    "0",
                                ),
                            ),
                            Lit(
                                Number(
                                    "1",
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ),
]
