tests/snapshots/ecma262__es2015_module-2.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Func(
                        Func {
                            id: None,
                            params: [],
                            body: FuncBody(
                                [],
                            ),
                            generator: false,
                            is_async: false,
                        },
                    ),
                ),
            ),
        ),
    ),
]
