tests/snapshots/ecma262__es2015_module-3.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Func(
                        Func {
                            id: Some(
                                Ident {
                                    name: "i16",
                                },
                            ),
                            params: [],
                            body: FuncBody(
                                [],
                            ),
                            generator: true,
                            is_async: false,
                        },
                    ),
                ),
            ),
        ),
    ),
]
