tests/snapshots/ecma262__es2015_module-4.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Func(
                        Func {
                            id: None,
                            params: [],
                            body: FuncBody(
                                [],
                            ),
                            generator: true,
                            is_async: false,
                        },
                    ),
                ),
            ),
        ),
    ),
]
