tests/snapshots/ecma262__es2015_module-5.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Class(
                        Class {
                            id: Some(
                                Ident {
                                    name: "i17",
                                },
                            ),
                            super_class: None,
                            body: ClassBody(
                                [],
                            ),
                        },
                    ),
                ),
            ),
        ),
    ),
]
