tests/snapshots/ecma262__es2015_module-6.snap
---
source: tests/ecma262.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Class(
                        Class {
                            id: Some(
                                Ident {
                                    name: "i18",
                                },
                            ),
                            super_class: Some(
                                Ident(
                                    Ident {
                                        name: "i19",
                                    },
                                ),
                            ),
                            body: ClassBody(
                                [],
                            ),
                        },
                    ),
                ),
            ),
        ),
    ),
]
